--- a/shinken_thruk_graphite/shinken/broker-master.cfg
+++ b/shinken_thruk_graphite/shinken/broker-master.cfg
@@ -37,7 +37,7 @@ define broker {
     # - graphite                = Use a Graphite time series DB for perfdata
     # - webui                   = Shinken Web interface
     # - glpidb                  = Save data in GLPI MySQL database
-    modules           webui2,livestatus,graphite
+    modules           webui2,livestatus,graphite,Status-Dat
 
     # Enable https or not
     use_ssl	          0
